--- a/introduccion-a-js-master/tareas/clase-6/index.html
+++ b/introduccion-a-js-master/tareas/clase-6/index.html
@@ -11,8 +11,19 @@
     <form action="">
         <label for="">crear inputs</label>
         <button type="button" id="btnProceso" onclick="empezarProceso()">Empezar proceso</button>
+        <br>
+        <div id="anexar"></div>
+        <br>
+        <button type="button" id="btnCalcular" onclick="realizarCalculo()">Calcular</button>
     </form>
-    
+    <div id="anexar"></div>
+
+<label>edad Maxima</label><div id="edadMaxima"></div>
+<br>
+<label>edad Minima</label><div id="edadMinima"></div>
+<br>
+<label>Promedio</label><div id="promedio"></div>
+
 </body>
 <script src="tarea-clase-6.js"></script>
 </html>
