--- a/MoneyExchange_Mio/index.html
+++ b/MoneyExchange_Mio/index.html
@@ -18,10 +18,11 @@
     <div class="card w-50 bg-light rounded-lg">
       <h5 class="card-header">Consulta de divisas</h5>
       <div class="card-body">
-       <h5 class="card-title">Moneda en base <h2></h2></h5>
+       <h5 class="card-title">Moneda en base <h2 id="monedaBase"></h2></h5>
        <span>
        <p class="card-text">Seleccione fecha de cotización.</p>
        <input type="date" name="datePicker" id="datePicker">
+       <select name="divisas" id="divisas"></select>
       </span>
         <div class="contenedorDivisas">
             <ul class="text-justify" id="lista"></ul>
