--- a/PokedexModular/index.html
+++ b/PokedexModular/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
+    <title>Pokedex Modular</title>
 </head>
 <body>
 
-
+<div id="DivMuestraPokemon"></div>
 
 <script type="module" src="./src/index.js"></script>
 </body>
