--- a/PokedexModular/index.html
+++ b/PokedexModular/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex Modular</title>
 </head>
+
 <body>
+    <div id="DivMuestraPokemon"></div>
 
-<div id="DivMuestraPokemon"></div>
-
-<script type="module" src="./src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
 </body>
+
 </html>
