shows pokemon´s name at index.html

--- a/PokedexModular/index.html
+++ b/PokedexModular/index.html
@@ -4,10 +4,21 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Pokedex Modular</title>
 </head>
 
 <body>
+
+    <header>
+        <nav>
+            <h1>POKEDEX MODULAR</h1>
+        </nav>
+
+    </header>
+
+
+
     <div id="DivMuestraPokemon"></div>
 
     <script type="module" src="./src/index.js"></script>
