added some pokemon specs

--- a/PokedexModular/index.html
+++ b/PokedexModular/index.html
@@ -19,7 +19,7 @@
 
 
 
-    <div id="DivMuestraPokemon"></div>
+    <div id="pokemonMosaicDiv"></div>
 
     <script type="module" src="./src/index.js"></script>
 </body>
