--- a/PokedexModular/index.html
+++ b/PokedexModular/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2&display=swap" rel="stylesheet">
     <title>Pokedex Modular</title>
 </head>
 
@@ -14,13 +15,12 @@
         <nav>
             <h1>POKEDEX MODULAR</h1>
         </nav>
-
     </header>
 
 
-
-    <div id="pokemonMosaicDiv"></div>
-
+    <div class="container">
+        <div id="pokemonMosaicDiv"></div>
+    </div>
     <script type="module" src="./src/index.js"></script>
 </body>
 
