--- a/PokedexModular/index.html
+++ b/PokedexModular/index.html
@@ -10,16 +10,14 @@
 </head>
 
 <body>
-
     <header>
-        <nav>
-            <h1>POKEDEX MODULAR</h1>
-        </nav>
+
+        <h1>POKEDEX by</h1><img src="./pokeapi_256.png" alt="pokeapi_logo">
+
     </header>
 
-
     <div class="container">
-        <div id="pokemonMosaicDiv"></div>
+        <div id="pokemon-mosaic-div"></div>
     </div>
     <script type="module" src="./src/index.js"></script>
 </body>
