new font and svg file

--- a/PokedexModular/index.html
+++ b/PokedexModular/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700&display=swap" rel="stylesheet">
     <title>Pokedex Modular</title>
 </head>
 
 <body>
     <header>
+        <div class="curve">1</div>
+        <h1>POKEDEX</h1>
+        <h2>powered by</h2>
+        <img src="./pokeapi_256.png" alt="pokeapi_logo">
 
-        <h1>POKEDEX by</h1><img src="./pokeapi_256.png" alt="pokeapi_logo">
 
     </header>
 
