--- a/react-firebase/react-firebase/public/index.html
+++ b/react-firebase/react-firebase/public/index.html
@@ -8,12 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="A Recipe keeper system made to Any" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!-- <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet"> -->
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
